--- a/resources/styles/styles.scss
+++ b/resources/styles/styles.scss
@@ -23,6 +23,8 @@ body{
         z-index: 1;
         width: 100%;
         max-width: 1200px;
+        padding-left: 34px;
+        padding-right: 34px;
         
 
 
